# streamlit-rag-app

./: .gitignore  README.md  pyproject.toml
src/streamlit_rag_app/: __init__.py  app.py  app_config.py  kendra_bedrock_query.py
